WIP: Product Click opens new tab. Fixed header gap for story

--- a/src/main/webapp/scss/echoed-widget.scss
+++ b/src/main/webapp/scss/echoed-widget.scss
@@ -483,6 +483,7 @@ $headerFontFamily: 'Arvo', serif;
             .echo-story-comments{
                 .echo-s-c-t{
                     @include textFontBold(24px);
+                    text-shadow: 0px 1px 0px #FFF;
                     margin-bottom: 5px;
                     #echo-s-c-t-count{
 
@@ -561,17 +562,17 @@ $headerFontFamily: 'Arvo', serif;
         @include textFontNormal(14px, #000);
         font-weight: 400;
     }
+}
 
-    .echoed-close{
-        position: absolute;
-        right:0px;
-        top:0px;
-        margin-right: -25px;
-        margin-top: -25px;
+.echoed-close{
+    position: absolute;
+    right:0px;
+    top:0px;
+    margin-right: -25px;
+    margin-top: -25px;
 
-        img{
-            cursor: pointer;
-        }
+    img{
+        cursor: pointer;
     }
 }
 
